--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser": "~11.0.0-rc.1",
     "@angular/platform-browser-dynamic": "~11.0.0-rc.1",
     "@angular/router": "~11.0.0-rc.1",
+    "@tensorflow/tfjs": "^2.7.0",
+    "@tensorflow/tfjs-converter": "^2.7.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
